<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_wheresafe_101"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:text="@string/wheresafe_101"
            app:backgroundTint="#b0b0b0"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/wheresafe_101_subtext" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_where_safe_features"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/features_experiences"
            app:backgroundTint="#b0b0b0"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/features_experiences_subtext" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_privacy_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_security"
            app:backgroundTint="#b0b0b0"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/privacy_security_subtext" />

        <ImageView
            android:id="@+id/wheresafe101_image"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="110dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/features_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/stayconnected"
            android:textSize="23sp"
            android:textStyle="italic"/>
    </LinearLayout>
</LinearLayout>