<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/privacy_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_security"
            android:layout_marginTop="60dp"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/privacy_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/privacy_description"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/wheresafe101_image"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/privacy_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stayconnected"
            android:textSize="25sp"
            android:textStyle="italic"/>

    </LinearLayout>

</ScrollView>