<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_teammate_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_background"
                app:cardBackgroundColor="@color/personal_cards"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtTemperatureTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:text="@string/temperature_data"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtTemperatureSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:text="@string/last_20_temperature_readings"
                        android:textSize="16sp" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/temperatureChartTeammate"
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                    </com.github.mikephil.charting.charts.LineChart>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_background"
                app:cardBackgroundColor="@color/personal_cards"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtHumidityTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/humidity_data"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtHumiditySubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/last_20_humidity_readings"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="16sp" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/humidityChartTeammate"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_background"
                app:cardBackgroundColor="@color/personal_cards"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtPressureTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/pressure_data"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtPressureSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/last_20_pressure_readings"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="16sp" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/pressureChartTeammate"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_background"
                app:cardBackgroundColor="@color/personal_cards"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtAltitudeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/altitude_data"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAltitudeSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/last_20_altitude_readings"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="16sp" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/altitudeChartTeammate"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_background"
                app:cardBackgroundColor="@color/personal_cards"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtGasTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/voc_data_trendline"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtGasSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/last_20_voc_readings"
                        android:paddingLeft="6dp"
                        android:paddingTop="1dp"
                        android:textSize="16sp" />

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/gasChartTeammate"
                        android:layout_width="match_parent"
                        android:layout_height="300dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>